# src/models/cart.model.js
@@ -1,0 +1,37 @@
+import mongoose from "mongoose";
+
+const cartSchema = new mongoose.Schema(
+  {
+    user: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "User",
+      required: true,
+    },
+
+    cartItems: [
+      {
+        productId: {
+          type: mongoose.Schema.Types.ObjectId,
+          ref: "Product",
+          required: true,
+        },
+        quantity: {
+          type: Number,
+          required: true,
+          min: 1,
+        },
+        totalPrice: {
+          type: Number,
+        },
+      },
+    ],
+
+    totalAmount: {
+      type: Number,
+    },
+  },
+  { timestamps: true }
+);
+
+const cartModel = mongoose.model("Cart", cartSchema);
+export default cartModel;
